tests/snapshots/serde__de_int8array_many_bytes.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int8Array([0, -1, 2, -3, 4, -5, 6, -7, 8])"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
            255,
            2,
            253,
            4,
            251,
            6,
            249,
            8,
        ],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: Int8Array,
        buffer: *0,
        byte_offset: 0,
        length: 9,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

