tests/snapshots/serde__de_int8array_two_bytes.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int8Array([1, -2])"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            1,
            254,
        ],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: Int8Array,
        buffer: *0,
        byte_offset: 0,
        length: 2,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

