tests/snapshots/serde__de_map_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Map()"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Map {},
}

