tests/snapshots/serde__de_map_object_key.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Map([[{ a: true }, 1]])"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Map {
        HeapReference(
            *1,
        ): I32(
            1,
        ),
    },
    1: Object {
        OneByte("a"): Bool(
            true,
        ),
    },
}

